force-app/main/default/objects/GARP_Portal_Program__mdt/GARP_Portal_Program__mdt.object-meta.xml
<CustomObject>
    <description>Declarative definition of every program and product family the member portal knows about: the catalogue text a page renders, the Contract record type and exam values that decide enrolment, and the per-program links. GARP_Portal_ProgramCatalog reads these rows, so adding a program is a metadata row rather than an Apex change.</description>
    <label>GARP Portal Program</label>
    <pluralLabel>GARP Portal Programs</pluralLabel>
</CustomObject>