force-app/main/default/objects/GARP_Portal_Program__mdt/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <description>Which portal features this program takes part in, as JSON flags: {&quot;errata&quot;: true, &quot;certification&quot;: true, &quot;detailPage&quot;: true, &quot;cv&quot;: true}. A flag that is absent reads as false. Each flag replaces one service&apos;s hand-written list of Contract record types — errata: may report book mistakes (GARP_Portal_ErrataService); certification: completing the program makes the member a certification holder, which sets the renewal price (GARP_Portal_MembershipService); detailPage and cv are reserved for the services that still carry literals. A service whose capability NO row claims falls back to its own literal list, so leaving this blank changes nothing and a bad value can only fail to add a feature, never take one away. Parsed strictly and independently of Config__c: a broken value here degrades only the capabilities, with a named warning on the response.</description>
    <label>Capabilities</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>