force-app/main/default/objects/GARP_Portal_Program__mdt/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>The program&apos;s badge and certificate links, as JSON — marketing data that changes when branding changes: {&quot;digitalBadgePageUrl&quot;: &quot;https://my.garp.org/DigitalBadgeFRM&quot;, &quot;certificateDownloadPath&quot;: &quot;/SCRCertificate&quot;, &quot;partBadges&quot;: {&quot;I&quot;: {&quot;imageUrl&quot;: &quot;...&quot;, &quot;pageUrl&quot;: &quot;...&quot;}, &quot;II&quot;: {...}}}. Every URL is stored WITHOUT the &quot;?id=&lt;contact&gt;&quot; the pages take — GARP_Portal_ProgramDetailService appends the signed-in member, so no row can be edited into pointing at somebody else&apos;s badge. partBadges is keyed by exam part (&quot;I&quot;, &quot;II&quot;) and supplies the per-part badge shown with a passing result. Leave blank to use the service&apos;s hard-coded fallback. Parsed strictly and independently of Config__c: a broken value here degrades only the credential links, with a named warning on the response.</description>
    <label>Credentials</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>