force-app/main/default/objects/GARP_Portal_Program__mdt/fields/Errata_Book_Label__c.field-meta.xml
<CustomField>
    <fullName>Errata_Book_Label__c</fullName>
    <description>The word this program&apos;s books are labelled with on the errata form&apos;s Section picklist, when it is not the program code itself. RAIJ&apos;s books are labelled &quot;Japanese&quot; and RAI&apos;s &quot;RAI Exam&quot;; every other program matches on its own name and leaves this blank. Plain text, no JSON. Read by GARP_Portal_ErrataService, which falls back to its hard-coded overrides when this is blank.</description>
    <label>Errata Book Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>